--- a/style/assignmentstyle.css
+++ b/style/assignmentstyle.css
@@ -318,6 +318,12 @@
     height: 72px;
     width: 670px;
     margin: 50px 470px;
+
+}
+input{
+    font-size: 20px;
+    font-family: 'Inter';
+    padding: auto 20px;
 }
 input[type="text"]{
     background: #FFF;
@@ -326,13 +332,12 @@ input[type="text"]{
     width: 340px;
     height: 52px;
     border-radius: 25px 0 0 25px;
-}
-input ::placeholder{
-    font-family:'inter';
+    
 }
 input[type="submit"]{
     border: none;
     outline: none;
+    color: #FFF;
     background: red;
     width: 140px;
     height: 52px;
